--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
 
 	<div class="col-md-7">
   <h1>Contact Us Now</h1>
-  <form target="_blank" action="https://formsubmit.co/keane1hernandez@gmail.com" method="POST">
+  <form target="_blank" name="contact" method="POST" data-netlify="true">
     <div class="form-group">
       <div class="form-row">
         <div class="col">
