--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="google-site-verification" content="tQpTEHm3r0UOIlOT6diwUwB5oZGEYiYNVm7owQ8Czhs" />
 	<title>Kryptonite Productions</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="bootstrap.css">
