--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 				<img class="card-img-top" src="images/teams/jay.jpg" alt="">
 				<div class="card-body">
 					<h4>Jessie Jay Borazon</h4>
-					<h5>Sky</h5>
+					<h5>alpha lodi cakes</h5>
 					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel.</p>
 					<a href="#"><i class="fab fa-facebook-f"></i></a>
 					<a href="#"><i class="fab fa-twitter"></i></a>
@@ -490,7 +490,7 @@
 				<img class="card-img-top" src="images/teams/brian.jpg" alt="">
 				<div class="card-body">
 					<h4>Brian Joseph Nava</h4>
-					<h5>President</h5>
+					<h5>lodicakes</h5>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel.</p>
 					<a href="#"><i class="fab fa-facebook-f"></i></a>
 					<a href="#"><i class="fab fa-twitter"></i></a>
@@ -503,7 +503,7 @@
 				<img class="card-img-top" src="images/teams/james.jpg" alt="">
 				<div class="card-body">
 					<h4>James Lemuel Mallapre</h4>
-					<h5>Video Guy</h5>
+					<h5>lodicakes</h5>
 					<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel.</p>
 					<a href="#"><i class="fab fa-facebook-f"></i></a>
 					<a href="#"><i class="fab fa-twitter"></i></a>
